<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@drawable/recycler_view_menu_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_remove"
        android:title="@string/remove"
        android:icon="@drawable/recycler_view_menu_remove"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_list_view"
        android:title="@string/listview" />
    <item
        android:id="@+id/action_grid_view_horizontal"
        android:title="@string/gridview_horizontal" />
    <item
        android:id="@+id/action_grid_view_vertical"
        android:title="@string/gridview_vertical" />
    <item
        android:id="@+id/action_staggered_view"
        android:title="@string/staggeredview" />

</menu>